[package]
name = "inbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.1", features = ["headers"] }
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tower = "*"

async-graphql = "4.0"
async-graphql-axum = "4.0" # 如果你需要集成到Axum
